Plugin that allows us to use `--add-exports` and `--release` together